k8s code/network-policy-ip-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-access-ip-specific
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 181.137.128.92/32  # Solo permite la IP específica
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - ipBlock:
            cidr: 181.137.128.92/32  # Solo permite la IP específica
      ports:
        - protocol: TCP
          port: 80
